[governance] Fix overlapping proposal votes and content (#1991)

--- a/app/style/Layout.less
+++ b/app/style/Layout.less
@@ -202,9 +202,7 @@
 }
 
 .tabbed-page-body.governance>.tab-content {
-  overflow-y: hidden;
-  display: flex;
-  flex-direction: column;
+  height: 100%;
 }
 
 .tabbed-page .tab-content {
